# polyFake

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.sh
backend/: __init__.py  config.py  main.py  models.py
backend/routers/: __init__.py  alerts.py  markets.py  system.py  trades.py  websocket.py
backend/services/: __init__.py  advanced_forensics.py  analyzer.py  forensics.py  storage.py
frontend/: app.js  index.html  simple.html  styles.css  test.html
guidelines/: ARCHITECTURE.md  PRESENTATION_REPORT.md  PROJECT_STATUS.md  README.md  REORGANIZATION_REPORT.md  SECURITY.md  overview.md
polysleuth/: __init__.py  dashboard_pro.py  dashboard_real.py  data_fetcher.py  real_forensics.py
